8193434: [GRAAL] Graal classes are not loaded with -Xshare:dump

Allow loading of non-boot classes during CDS dumping but only add boot classes to the archive

Reviewed-by: kvn, iklam, jiangli